services/k8s/bewcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bewcloud-service
  annotations:
    cloud.google.com/backend-config: '{"default": "bewcloud-backend-config"}'
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: bewcloud
  type: NodePort
