services/k8s/bewcloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    networking.gke.io/frontend-config: bewcloud-default-frontend-config
    networking.gke.io/managed-certificates: bewcloud-cert
  name: bewcloud-ingress
spec:
  rules:
  - host: cloud.j15r.com
    http:
      paths:
      - backend:
          service:
            name: bewcloud-service
            port:
              number: 80
        path: /
        pathType: Prefix
